added a pic of my cd player

--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -31,9 +31,9 @@
 
 		<center><img src="/!g/deco/jermamusic.gif"></center>
 
-		<h3>stuff</h3>
+		<h3>music habits and stuff</h3>
 		<!-- make it so when i hover over the headphone names, a pic pops up -->
-		<p>i'll always try to get the <a title="my CD collection" href="cds.html" target="_blank">CDs</a> of my favorite releases. i love getting albums because i actually use with alongside my battery powered CD player whenever the power goes out. <small>thank you Puerto Rico.</small></p>
+		<p><img title="my awesome CD player" src="!g/index/cd-player.png" alt="philips jogproof portable CD player" width="35%" style="float:right;margin:10px;">i'll always try to get the <a title="my CD collection" href="cds.html" target="_blank">CDs</a> of my favorite releases. i love getting albums because i actually use with alongside my battery powered CD player whenever the power goes out. <small>thank you Puerto Rico.</small></p>
 
 		<p><b>headphones</b> i like using are the <i>razer kraken kitty headset</i> <small>they are the best sounding headphones i've ever had tbh</small>, and <i>JBL tune 720bt</i> for when i prefer using bluetooth.</p>
 		<p><a href="https://getwacup.com/" target="_blank">WACUP</a> is my favorite <b>music player</b> for desktop. look how cute...</p>
