minor change to homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -145,11 +145,8 @@ finished on 02.mar.25 -->
 				<section class="notepad-boxes" id="now">
 					<!-- take out the break lines..... be normal -->
 					<h3>currently...</h3>
-					<p><span class="title">news: </span>
-						<center> my birthday is today!
-							<br><img src="https://doqmeat.com/!g/pix/emote1nya.gif" alt=""> <img src="https://doqmeat.com/!g/pix/festivebday.gif" alt=""> <img src="https://doqmeat.com/!g/pix/festiveba.gif" alt="">
-						</center>
-					</p>
+					<!-- <p><span class="title">news: </span>
+					</p> -->
 
 					<p><span class="title">feeling: </span> <a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a></p>
 					<p><span class="title">status: </span>
@@ -160,7 +157,7 @@ finished on 02.mar.25 -->
 					<p><span class="title">watching: </span> jojo's bizarre adventure</p>
 					<p><span class="title">reading: </span> official bloodborne strategy guide, JS for dummies</p>
 					<p><span class="title">working on: </span> making JS walkman mp3 player, having a fun summer break!</p>
-					<p class="date">last updated: 02.jun.25</p>
+					<p class="date">last updated: 03.jun.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
