--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -52,6 +52,11 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>03.jun.25 - 3am</b> celebrated my b-day a little bit yesterday. i organized a hangout with my online friends and we got to play some marvel rivals together. it was my first time playing and as a overwatch player i find it VERY fast paced to my liking.</p>
+					<p>got some b-day gift from my lovely girlfriend. one of them was a melody themed wooden flower pot that you had to put together like a lego and the other gift was from a mystery box of bread animals :3 <button onclick="showPic('!g/250603-flower.png','wooden melody flower decoration','i had a lot of fun building it, its so cute!!')">flower.png</button> <button onclick="showPic('!g/250603-elephant.png','elephant bread','look at this little guy')">elephant.png</button></p>
+					<p>and then later around the day i went for a walk. haven't walked in a bit. i eventually started thinking about that siinamota lyric from <a title="youtube video" href="https://www.youtube.com/watch?v=7sKs7INaEoA" target="_blank" class="outlink">strobe light</a> that goes <i>i'm looking for meaning in life... i walk because i was born</i> and i started tearing up. yeah i really do think life is beautiful.</p>
+				</article>
+				<article>
 					<p><b>17.may.25 - 6pm</b> will be done with this uni semester pretty soon! here's my list of fun things to do this summer:
 					<ul>
 						<li>build a <a title="github repository" href="https://github.com/doqmeat/js-walkman-mp3-player" target="_blank" class="outlink">JS walkman music player</a></li>
