--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -156,8 +156,8 @@ finished on 02.mar.25 -->
 					<p><span class="title">playing: </span> bloodborne, overwatch 2, infinity nikki</p>
 					<p><span class="title">watching: </span> jojo's bizarre adventure</p>
 					<p><span class="title">reading: </span> official bloodborne strategy guide, JS for dummies</p>
-					<p><span class="title">working on: </span> making JS walkman mp3 player, having a fun summer break!</p>
-					<p class="date">last updated: 03.jun.25</p>
+					<p><span class="title">working on: </span> making a <a href="https://github.com/doqmeat/js-walkman-mp3-player" target="_blank" class="outlink">js walkman mp3 music player</a>, having a fun summer break!</p>
+					<p class="date">last updated: 04.jun.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
