--- a/doqmeat/notebook/F2U/codes.html
+++ b/doqmeat/notebook/F2U/codes.html
@@ -20,7 +20,7 @@
 	<div id="wrapper">
 		<p class="hide"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; F2U &gt;</small>
 			<center>
-				<h1>templates</h1>
+				<h1>templates / codes</h1>
 			</center>
 		<p>F2U layouts and templates coded by me for you to use on your website! <a href="https://github.com/doqmeat/HTML-templates" target="_blank">github repository</a> / <a title="i host the zip folders with the files here!" href="https://ko-fi.com/doqmeat/shop/htmltemplates" target="_blank">ko-fi shop</a>
 
@@ -29,6 +29,10 @@
 		<li>you are allowed to edit and use code from these templates for your own things to your hearts content</li>
 		<li><b>credit is not mandatory</b> but a link back to my <a href="https://doqmeat.com/" target="_blank">website</a> anywhere is very appreciated.</li>
 
+		<h2 id="walkman"><a title="preview and download" href="https://doqmeat.github.io/js-walkman-mp3-player/">JS sony walkman mp3 player</a></h2>
+		<img src="https://github.com/doqmeat/js-walkman-mp3-player/raw/master/examples/walkman.gif" alt="demo of the JS walkman mp3 player">
+		<p>i had one of these when i was little so i wanted to try doing a JS music player (using sayantanm19's <a href="https://github.com/sayantanm19/js-music-player" target="_blank" class="outlink">js-music-player</a>) that looked as much as the real thing. it was very fun to do tbh! i implemented a little playlist screen in which you can select what song to play.</p>
+		<p>it looks best on firefox, but looks okay on chrome. more details about issues can be found on the github repo.</p>
 		<h2 id="yukika"><a title="click for preview and code!" href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank">yukika passport</a></h2>
 		<img src="preview/yukika1.jpg" width="100%" alt="screenshots of yukika theme">
 		<img src="preview/yukika2.jpg" width="100%" alt="screenshots of yukika theme">
