added a new plushie to the family

--- a/doqmeat/collection/plushies/index.html
+++ b/doqmeat/collection/plushies/index.html
@@ -141,6 +141,19 @@
 		<!--		COLUMN 2 -->
 		<div class="column">
 
+			<div class="plush one">
+				<div class="images">
+					<img src="!g/caterpillar (2).png" alt="plushie of caterpillar">
+					<img src="!g/caterpillar (1).png" alt="plushie of caterpillar">
+					<img src="!g/caterpillar (3).png" alt="plushie of caterpillar">
+				</div>
+				<div class="desc">
+					<h2>caterpillar</h2>
+					<p>found once again at my work place! it was part of a mystery box (it was a bag...) but i did a little bit of cheating... you see, the bag had little holes so air could flow and through those holes i noticed the rainbow fur and i was like YESSSSSSS i need you so bad. along side the caterpillar i could have also gotten a very cute bee but i absolutely fell in love with the caterpillar instead. i love the rainbow fur + she just looks so silly. happy pride month to her.</p>
+					<p><b>brand:</b> aphmau meemeows</p>
+				</div>
+			</div>
+
 			<div class="plush two">
 				<div class="images">
 					<img src="!g/steve.png" alt="plushie of steve">
@@ -150,12 +163,13 @@
 					<p>found while cleaning the toy area of my work place.</p>
 					<p>had to take him home. hope you can understand.</p>
 					<p>he's kinda huge.</p>
+					<p><b>brand:</b> aphmau meemeows</p>
 				</div>
 			</div>
 
 			<div class="plush one">
 				<div class="images">
-					<img src="!g/nyan-cat.png">
+					<img src="!g/nyan-cat.png" alt="plushie of nyan cat">
 				</div>
 				<div class="desc">
 					<h2>nyan cat</h2>
@@ -259,7 +273,7 @@
 
 	</main>
 	<footer>
-		<p><b>last updated on 11.dec.24</b></p>
+		<p><b>last updated on 08.jun.25</b></p>
 		<p><img src="favicon.gif"> <a href="#">top</a> / <a href="/">home</a> / <a href="/collection/index.html">collections</a> / <a href="/sitemap.html">sitemap</a> <img src="favicon.gif"></p>
 		<p><b>credit:</b> body bg pic by <a href="https://unsplash.com/@myshegotripped?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Mandy Dolan</a> on <a href="https://unsplash.com/photos/a-pile-of-stuffed-animals-sitting-next-to-each-other-01gHSXwbCUQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> / <a href="/notebook/links/fonts.html">fonts</a> used: momo, gaegu
 		</p>
