added a new pic

--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -47,7 +47,7 @@ coded with love by des
 
 			<div class="pic x"><img src="!g/160419-butter.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						hiii this is a caption
 					</div>
 				</div>
@@ -75,20 +75,20 @@ coded with love by des
 				<img src="!g/231227-florida%20(16).jpg">
 				<img src="!g/231227-florida%20(17).jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						from my florida trip with my girlfriend :D we went to disney, bush gardens, sea world, and universal.<br>
 						<b>taken throughout december 2023</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/240609-sunset.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						beautiful sunset
 						<br>
 						<b>taken on 08.jun.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
@@ -101,70 +101,70 @@ coded with love by des
 				<img src="!g/240601-az%20(6).jpg">
 				<img src="!g/240601-az%20(7).jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						went camping somewhere in AZ, very nice and chill. i love the little white flowers that was growing around the place. <br>found a bug buddy too! a friend told me it is a <i>"robberfly"</i>... first time i hear of them and see them.<br>my mom's dog <i>toby</i> cameo. he's ugly but also cute.<br><small>will post the scanned fujifilm pics at a later date!</small><br><b>taken on 01.jun.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/240402-cat.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						chillin' on top of a car. dick face...
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/230220-sunset-1.jpg"><img src="!g/230220-sunset-2.jpg"><img src="!g/230220-sunset-3.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						sunsets
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/160419-butter.jpg">
 				<div class="hov">
-					<div class="caption">butterflies :D <br>butterflies make me so happy</div>
+					<p class="caption">butterflies :D <br>butterflies make me so happy</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/230701-swamp.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						swamp
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/230701-shell.jpg">
 				<div class="hov">
-					<div class="caption">
-						wall that was completely made out of shells. there was also a house that was also entirely covered with shells. pretty neat!</div>
+					<p class="caption">
+						wall that was completely made out of shells. there was also a house that was also entirely covered with shells. pretty neat!</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/230701-birds.jpg">
 				<div class="hov">
-					<div class="caption">birds flying above me at the beach. they were looking for dinner</div>
+					<p class="caption">birds flying above me at the beach. they were looking for dinner</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/230701-beach.jpg">
 				<div class="hov">
-					<div class="caption">a sad looking beach. didnt get in</div>
+					<p class="caption">a sad looking beach. didnt get in</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/230628-rainbow.jpg">
 				<div class="hov">
-					<div class="caption">i love seeing rainbows while driving</div>
+					<p class="caption">i love seeing rainbows while driving</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/230519-dog-perla.jpeg">
 				<div class="hov">
-					<div class="caption">doggy :D</div>
+					<p class="caption">doggy :D</p>
 				</div>
 			</div>
 
@@ -172,14 +172,25 @@ coded with love by des
 		<!-- 2nd column -->
 		<div class="column">
 
+			<div class="pic digi">
+				<img src="!g/250609-flowers.jpg" alt="a picture of some pink flowers with a bit of a grey sky in the background">
+				<div class="hov">
+					<p class="caption">
+						taken during a walk. it was a little cloudy but it was still a nice walk.
+						<br>
+						<b>taken on: 02.jun.25</b>
+					</p>
+				</div>
+			</div>
+
 			<div class="pic digi"><img src="!g/240625-jerome%20(1).jpg">
 				<img src="!g/240625-jerome%20(2).jpg">
 				<img src="!g/240625-jerome%20(3).jpg">
 				<img src="!g/240625-jerome%20(4).jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						ghost town of jerome. talk more about this place on my <a href="/journal/2024/06.html#25">journal log</a>
-					</div>
+					</p>
 				</div>
 			</div>
 
@@ -193,51 +204,51 @@ coded with love by des
 				<img src="!g/240605-rose-garden%20(7).jpg">
 				<img src="!g/240605-rose-garden%20(8).jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						visited a rose garden before they died during the summer! it smelled so lovely. i felt like the little prince <br> <b>taken on: 05.jun.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/240120-cat-shrine%20(2).jpg" alt="cat shrine"><img src="!g/240120-cat-shrine%20(1).jpg" alt="cat shrine">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						a shrine for a cat, saw this at my uni campus ＞︿＜
 						<br>
 						<b>taken on: 19.jan.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/210503-mizu-2.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						instant film <a title="mizu shrine!" href="/shrines/mizu/">mizu</a> :3
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/200304-moon.jpg">
 				<div class="hov">
-					<div class="caption">one day i bought a cheap (i think, it was like 60 dollars or something) polaroid telescope. mostly just used it to look at the moon. the thing didn't take pictures so i put my phone's camera on the eyehole to get this pic. one of my fav pics ever</div>
+					<p class="caption">one day i bought a cheap (i think, it was like 60 dollars or something) polaroid telescope. mostly just used it to look at the moon. the thing didn't take pictures so i put my phone's camera on the eyehole to get this pic. one of my fav pics ever</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/210903-car.jpg">
 				<div class="hov">
-					<div class="caption">abandoned car</div>
+					<p class="caption">abandoned car</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/210827-airplane-to-pr.jpg">
 				<div class="hov">
-					<div class="caption">on my airplane ride to puerto rico</div>
+					<p class="caption">on my airplane ride to puerto rico</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/191230-snow.png">
 				<div class="hov">
-					<div class="caption">tiny snowmen. dad and son</div>
+					<p class="caption">tiny snowmen. dad and son</p>
 				</div>
 			</div>
 
@@ -257,19 +268,19 @@ coded with love by des
 
 			<div class="pic digi"><img src="!g/240716.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						cute flowers i saw while walking
 						<br><b>taken on 16.jul.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic film">
 				<img src="!g/240702-filmscans%20(2).jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						my little garden<br> <b>taken on 01.jul.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
@@ -280,59 +291,59 @@ coded with love by des
 				<img src="!g/240605-flower-garden-3ds%20(4).JPG">
 				<img src="!g/240605-flower-garden-3ds%20(5).JPG">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						my phone started overheating at the rose garden so i started taking pics with my 3DS LOL... i do like how they turned out tbh. the 3D effect also turned out pretty good too!<br> <b>taken on 05.jun.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/240322-pond.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						a little pond <br> <b>taken on 21.mar.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/231202-caterpillar-flower.jpg">
 				<div class="hov">
-					<div class="caption">while on my walk, i stopped to take a pic of these flowers. when i bend down to take the pic, i noticed the lil caterpillar underneath the leaf :3 what a cutie. <b>taken on 02.dec.23</b></div>
+					<p class="caption">while on my walk, i stopped to take a pic of these flowers. when i bend down to take the pic, i noticed the lil caterpillar underneath the leaf :3 what a cutie. <b>taken on 02.dec.23</b></p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/160305-mushroom.jpg">
 				<div class="hov">
-					<div class="caption">MUSHROOMS!!!! i haven't seen mushrooms growing in the wild in so long, it makes me sad.</div>
+					<p class="caption">MUSHROOMS!!!! i haven't seen mushrooms growing in the wild in so long, it makes me sad.</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/221018-isabela-1.jpg"><img src="!g/221018-isabela-3.jpg">
 				<div class="hov">
-					<div class="caption">beach! i love going to the beach</div>
+					<p class="caption">beach! i love going to the beach</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/190304-az.png">
 				<div class="hov">
-					<div class="caption">taken in arizona. i was in a ghost town tourist attraction thing.</div>
+					<p class="caption">taken in arizona. i was in a ghost town tourist attraction thing.</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/190101-sunset1.png">
 				<div class="hov">
-					<div class="caption">i love taking pics of sunsets as you will see</div>
+					<p class="caption">i love taking pics of sunsets as you will see</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/190101-sunset2.png">
 				<div class="hov">
-					<div class="caption">guys i love sunsets.</div>
+					<p class="caption">guys i love sunsets.</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/190305-dessert.jpg">
 				<div class="hov">
-					<div class="caption">taken on a camping trip in a arizona desert. chill experience from what i remember. mostly spent my time reading a book.</div>
+					<p class="caption">taken on a camping trip in a arizona desert. chill experience from what i remember. mostly spent my time reading a book.</p>
 				</div>
 			</div>
 
@@ -342,7 +353,7 @@ coded with love by des
 
 			<div class="pic film"><img src="!g/180427-sunset-prflag.jpg">
 				<div class="hov">
-					<div class="caption">puerto rican flag over sunset. i should turn the brightness up on this one</div>
+					<p class="caption">puerto rican flag over sunset. i should turn the brightness up on this one</p>
 				</div>
 			</div>
 
@@ -353,9 +364,9 @@ coded with love by des
 
 			<div class="pic digi"><img src="!g/250406-bloom.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						so nice seeing the trees blooming.<br><b>taken on 03.apr.25</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
@@ -369,11 +380,11 @@ coded with love by des
 				<img src="!g/240702-filmscans%20(8).jpg">
 				<img src="!g/240702-filmscans%20(9).jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						scanned some instax pics from my trip
 						<br>
 						<b>taken throughout june 2024</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
@@ -386,69 +397,69 @@ coded with love by des
 				<img src="!g/240608-river%20(6).JPG">
 				<img src="!g/240608-river%20(7).JPG">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						went down a river.
 						<br>
 						<b>taken on 08.jun.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/240419-misty.jpeg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						there's this cat called misty that visits me every once in a while. she's very cute! i got her name from her collar. it has a little bell which is perfect because it let's me know when she's by and i always open the door so i can give her some pets. good cat.
 						<br>
 						<b>taken on 19.apr.24</b>
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic film"><img src="!g/221018-isabela-2.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						grandma
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/230201-butterfly1.jpg"><img src="!g/230201-butterfly2.jpg"><img src="!g/230201-butterfly3.jpg">
 				<div class="hov">
-					<div class="caption">
+					<p class="caption">
 						one day i got out of the house and there were a ton of butterflies around.
 						<br>me when i go outside and see wonderful creatures like bees and butterflies <img src="/!g/pix/emote1sparkles.gif">
 						<br><br>i love going outside. everyone, lets go outside.
-					</div>
+					</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/150205-mizu.jpg">
 				<div class="hov">
-					<div class="caption">mizu on a tree, what will he do. i remember i took this one at 6am as i was about to catch the bus for school.</div>
+					<p class="caption">mizu on a tree, what will he do. i remember i took this one at 6am as i was about to catch the bus for school.</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/160419-flower1.jpg"><img src="!g/160419-flower2.jpg">
 				<div class="hov">
-					<div class="caption">flowers</div>
+					<p class="caption">flowers</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/150918-sunset.jpg">
 				<div class="hov">
-					<div class="caption">one of my favorite sunsets that i've captured</div>
+					<p class="caption">one of my favorite sunsets that i've captured</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/150405-corrupted-beach.jpg">
 				<div class="hov">
-					<div class="caption">pic i took that ended up getting corrupted. find it very cool to this day</div>
+					<p class="caption">pic i took that ended up getting corrupted. find it very cool to this day</p>
 				</div>
 			</div>
 
 			<div class="pic digi"><img src="!g/180703-insect.jpg">
 				<div class="hov">
-					<div class="caption">sooooo pretty :3</div>
+					<p class="caption">sooooo pretty :3</p>
 				</div>
 			</div>
 
