--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -66,9 +66,9 @@ finished on 02.mar.25 -->
 		<nav class="box">
 			<h3>personal</h3>
 			<a class="p" href="/about">about</a>
-			<a class="p" href="/photobook">photobook</a>
+			<a class="p" href="/photobook">photobook <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="p" href="/journal">journal</a>
-			<a class="p" href="/microblog">microblog </a>
+			<a class="p" href="/microblog">microblog</a>
 			<a class="p" href="/blog">blog</a>
 			<a class="p" href="/fashion">fashion</a>
 			<a class="p" href="/scrapbook">scrapbook</a>
