--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -143,7 +143,6 @@ finished on 02.mar.25 -->
 					<a href="https://info.flagcounter.com/924j"><img src="https://s11.flagcounter.com/count/924j/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_15/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" width="90%" alt="Flag Counter" border="0"></a>
 				</section>
 				<section class="notepad-boxes" id="now">
-					<!-- take out the break lines..... be normal -->
 					<h3>currently...</h3>
 					<!-- <p><span class="title">news: </span>
 					</p> -->
@@ -156,8 +155,8 @@ finished on 02.mar.25 -->
 					<p><span class="title">playing: </span> bloodborne, overwatch 2, infinity nikki</p>
 					<p><span class="title">watching: </span> jojo's bizarre adventure</p>
 					<p><span class="title">reading: </span> official bloodborne strategy guide, JS for dummies</p>
-					<p><span class="title">working on: </span> making a <a href="https://github.com/doqmeat/js-walkman-mp3-player" target="_blank" class="outlink">js walkman mp3 music player</a>, having a fun summer break!</p>
-					<p class="date">last updated: 04.jun.25</p>
+					<p><span class="title">working on: </span> working, having a fun summer break!</p>
+					<p class="date">last updated: 11.jun.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
