--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -28,17 +28,12 @@
 			overflow: auto;
 			padding: 2px;
 			border-radius: 10px;
-		}
 
-		.gaminglog {
-			letter-spacing: 2px;
-			font-family: yoster;
-		}
-
-		#log li {
-			list-style-image: url('/!g/pix/staryellow.gif');
-			padding-left: 2px;
-			margin-bottom: 10px;
+			li {
+				list-style-image: url('/!g/pix/staryellow.gif');
+				padding-left: 2px;
+				margin-bottom: 10px;
+			}
 		}
 	</style>
 </head>
@@ -55,7 +50,8 @@
 		<h2>changelog</h2>
 
 		<div id="log">
-			<li>1.jun.25: archived my spreadsheet page and added a link to my <a href="https://backloggd.com/u/doqmeat/" target="_blank" class="outlink">backlogged account</a>! it will be my primary way of tracking games from now on. + log: <a href="games/kirby-planet-robobot/index.html">kirby planet robobot</a></li>
+			<li>13.jun.25: log <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
+			<li>01.jun.25: archived my spreadsheet page and added a link to my <a href="https://backloggd.com/u/doqmeat/" target="_blank" class="outlink">backlogged account</a>! it will be my primary way of tracking games from now on. + log: <a href="games/kirby-planet-robobot/index.html">kirby planet robobot</a></li>
 			<li>30.may.25: log: <a href="games/bloodborne/index.html">bloodborne</a> + <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
 			<li>25.may.25: log <a href="games/bloodborne/index.html">bloodborne</a> + new: <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
 			<li>22.may.25: log: <a href="games/bloodborne/index.html">bloodborne</a> + added <a href="hardware/index.html#PS5">PS5</a> to hardware</li>
