infinity nikki log

--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -23,10 +23,24 @@
 
     <div class="info"><b>release date: </b> dec 5, 2024</div>
     <div class="info"><b>developer: </b> papergames</div>
-    <div class="info"><b>genre/type: </b> open world</div>
-    <br>
-    <!-- // have character stats here! -->
+    <div class="info"><b>genre/type: </b> open world, dress-up game</div>
+
     <h3>logs</h3>
+    <p><span class="date">13.jun.25</span> meetup with <a href="https://angelnetcast.com/" target="_blank" class="outlink">angel</a>! the co-op features in infinity nikki are still a little bit wonky but at least i can take my pics.</p>
+    <img src="angel (2).jpg" alt="pictures taken with angel" width="100%">
+    <img src="angel (1).jpg" alt="pictures taken with angel" width="100%">
+    <img src="angel (3).jpg" alt="pictures taken with angel" width="100%">
+    <p>here's some pictures of some outfits! been a little obsessed with green as of late. i wonder why since i am not the biggest fan of green.</p>
+    <img src="250613 (1).jpg" alt="infinity nikki screenshot" width="100%">
+    <img src="250613 (2).jpg" alt="infinity nikki screenshot" width="100%">
+    <img src="250613 (3).jpg" alt="infinity nikki screenshot" width="100%">
+    <img src="250613 (4).jpg" alt="infinity nikki screenshot" width="100%">
+    <img src="250613 (5).jpg" alt="infinity nikki screenshot" width="100%">
+    <p>also, i will probably rework this page to be some sort of album bc i can tell it's going to get very img heavy.</p>
+
+
+
+    <hr>
     <p><span class="date">30.may.25</span> some outfits! i met some frog people and they are so cute!</p>
     <img src="blue (1).jpg" alt="infinity nikki screenshots" width="100%">
     <img src="blue (2).jpg" alt="infinity nikki screenshots" width="100%">
