fixed last.fm widget js. thank you ARTMS

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -13,7 +13,7 @@ finished on 02.mar.25 -->
 	<link href="rss.xml" rel="alternate" type="application/rss+xml" title="doqmeat RSS feed">
 	<link rel="icon" type="image/x-icon" href="/!g/pix/dumy.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="!f/v5/body.css?0407" rel="stylesheet" type="text/css" media="all">
+	<link href="!f/v5/body.css?0613" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -45,12 +45,14 @@ finished on 02.mar.25 -->
 			</div>
 		</main>
 
-		<!-- walman mp3 music player / last played on last.fm  -->
+		<!-- walkman mp3 music player / last played on last.fm  -->
 		<aside id="music" class="box">
 			<div id="screen">
 				<p>last listened to...</p>
 				<p id="album"></p>
-				<p id="song"></p>
+				<p id="song"><span class="icons">🎵</span> </p>
+				<p id="artist"><span class="icons">👤</span> </p>
+				<p id="albumname"><span class="icons">🖼️</span> </p>
 				<!-- screen end div -->
 			</div>
 
@@ -334,7 +336,7 @@ finished on 02.mar.25 -->
 
 	<script src="https://status.cafe/current-status.js?name=doqmeat" defer></script>
 	<script src="!f/v5/script.js?0407"></script>
-	<script src="!f/v5/last-fm.js"></script>
+	<script src="!f/v5/last-fm.js?0613"></script>
 </body>
 
 </html>
