--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -93,7 +93,6 @@
 			<a title="kyu - their art radiates such a warm feeling on me.... idk but i really love it here" href="https://kyu.neocities.org" target="_blank"><img src="!g/kyu.gif"></a>
 			<a title="alexandra - AWESOME site with so many links and things to read!" href="https://xandra.cc/" target="_blank"><img src="!g/xandra.png"></a>
 			<a title="leviathren - very cool site. im a big enjoyer of the different themes" href="https://leviathren.neocities.org/" target="_blank"><img src="!g/leviathren.gif"></a>
-			<a title="aubr - a site that feels very real if that makes any sense. their photography is quite honestly an inspiration for my own" href="https://410.neocities.org"><img src="https://410.neocities.org/button.png" alt="410"></a>
 			<a title="dreambubble - cool site filled with pixels and interesting pages!" href="https://dreambubble.neocities.org/" target="_blank"><img src="!g/dreambubble.gif"></a>
 			<a title="lostlove - cozy site with a nice journal" href="https://lostlove.neocities.org/" target="_blank"><img src="!g/lostlove.gif"></a>
 			<a title="mapplebear - a super sweet and cozy site, i especially love their logs about fashion!" href="https://maplebear.neocities.org/" target="_blank"><img src="!g/maplebear.gif" alt="maplebear"></a>
@@ -233,6 +232,7 @@
 			<a href="https://hazilysora.neocities.org/" target="_blank" title="hazilysora"><img src="!g/hazilysora.png" alt="hazilysora"></a>
 			<a href="https://pux.nehukon.de/" target="_blank" title="puxped"><img src="!g/puxped.svg" alt="puxped"></a>
 			<a title="nathanntan" href="https://nathanntan.neocities.org/" target="_blank"><img src="!g/nathanntan.png"></a>
+			<a title="nic" href="https://51db.neocities.org/" target="_blank"><img src="!g/51db.gif" alt="51db"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -391,7 +391,6 @@
 			<a title="lovely photos on their blog" href="https://bootlegfriend.neocities.org" target="_blank"><img src="!g/bootleg.png" alt="bootleg"></a>
 			<a href="https://angelscake.neocities.org/" target="_blank"><img src="!g/angelscake.gif" alt="angelscake"></a>
 			<a href="https://sealparty.neocities.org" target="_blank"><img src="!g/sealparty.gif"></a>
-			<a title="rice" href="https://rice.place/" target="_blank"><img src="https://rice.nekoweb.org/button/riceplace.png"></a>
 		</div>
 
 		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
