changed letterboxd username

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -359,7 +359,7 @@
 				<li><a title="all of my projects have repositories here!" href="https://github.com/doqmeat" target="_blank">github</a></li>
 				<li><a title="here til the site gets inevitably nuked" href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
 				<li><a title="i LOVE logging on what i listen to" href="https://rateyourmusic.com/~doqmeat" target="_blank">rate your music</a></li>
-				<li><a title="i LOVE logging on what i watch" href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
+				<li><a title="i LOVE logging on what i watch" href="https://letterboxd.com/doqmeat/" target="_blank">letterboxd</a></li>
 				<li><a title="i LOVE logging on what i play" href="https://backloggd.com/u/doqmeat/" target="_blank">backloggd</a></li>
 				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
 				<li><a title="i upload stuff every now and then" href="https://www.youtube.com/@doqmeat" target="_blank">youtube</a></li>
