--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -44,7 +44,7 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
-					the name is <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> i'm a 25 year old from puerto rico. fluent in english and spanish. he / she <u title="él / ella en español">*</u> pronouns. computer science student interested in web development and web design <img src="/!g/pix/heart4.png" alt=""> i love life</p>
+					the name is <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> i'm a 25 year old from puerto rico. fluent in spanish and english so feel free to talk me to in either! i go by he / she <u title="él / ella en español!">*</u> pronouns though at the end of the day you can call me whatever, i don't mind. computer science student interested in web development and web design <img src="/!g/pix/heart4.png" alt=""> i love life.</p>
 
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
@@ -53,7 +53,7 @@
 
 				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">i won't reach out fast but do feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a while to answer back but anything goes, thank you very much for reading!</p>
 
-				<p style="text-align: right"><b>last updated on: 25.may.25</b></p>
+				<p style="text-align: right"><b>last updated on: 18.jun.25</b></p>
 			</div>
 		</div>
 	</div>
@@ -183,24 +183,24 @@
 				<h3>in general</h3>
 				<li>cats</li>
 				<li>making lists</li>
-				<li>horror</li>
+				<li>horror in media</li>
 				<li>driving at night (with no traffic)</li>
 				<li>hand shakes</li>
 				<li>the color purple and yellow</li>
 
 				<h3>video games</h3>
 				<li>portal 2</li>
+				<li>style savvy</li>
 				<li>stray</li>
 				<li>hyper light drifter</li>
 				<li>if found...</li>
-				<li>fallout 4</li>
+				<li>fallout</li>
 
 				<h3>animanga</h3>
 				<li>madoka magica</li>
 				<li>kaiba (2008)</li>
 				<li>our dreams at dusk</li>
 				<li>mob psycho 100</li>
-				<li>eizouken</li>
 
 				<h3>films</h3>
 				<li>look back</li>
@@ -213,8 +213,8 @@
 				<h3>other media</h3>
 				<li>the little prince</li>
 				<li>joe pera talks with you</li>
-				<li>bee and puppycat</li>
 				<li>clarence</li>
+				<li>whatever jerma985 is up to</li>
 			</div>
 		</div>
 	</div>
