--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -156,9 +156,9 @@ finished on 02.mar.25 -->
 					</p>
 					<p><span class="title">playing: </span> bloodborne, overwatch 2, infinity nikki</p>
 					<p><span class="title">watching: </span> jojo's bizarre adventure</p>
-					<p><span class="title">reading: </span> official bloodborne strategy guide</p>
+					<p><span class="title">reading: </span> <a href="https://javascript.info/" target="_blank" class="outlink">the modern javascript tutorial</a></p>
 					<p><span class="title">working on: </span> <a href="https://roadmap.sh/frontend?s=67a96538f86334348220c214" target="_blank" class="outlink">frontend roadmap</a>, having a fun summer break!</p>
-					<p class="date">last updated: 17.jun.25</p>
+					<p class="date">last updated: 18.jun.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
