--- a/doqmeat/journal/archive.html
+++ b/doqmeat/journal/archive.html
@@ -69,6 +69,7 @@ coded with love by des
     <button onclick="showLog('site')">site</button>
     <button onclick="showLog('music')">music</button>
     <button onclick="showLog('gaming')">gaming</button>
+    <li class="gaming">18.jun.25 - <a href="2025/06.html#18">PS5 thoughts: 1 month in</a></li>
     <li class="tech interests">01.jun.25 - <a href="2025/06.html#1">my beautiful madoka discs</a></li>
     <li class="life uni">26.may.25 - <a href="2025/05.html#26">recap of uni semester + summer plans</a></li>
     <li class="pets">20.apr.25 - <a href="2025/04.html#20">walking steve minecraft outside</a></li>
